# AKMC

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  README.md
Common/: ArtCntrl.h  Basis.cpp  DimerCntrl.cpp  DimerCntrl.h  JobControl.h  MPICommunicator.h  Memory.h  NudgeCntrl.h  RelaxCntrl.h  Status.h  Utility.cpp  WorkGroup.h
docs/docs/source/: ACDCUserGuide.rst
docs/examples/gdc/: README  basis  control
kmc/: Event.cpp  Event.h  KineticMonteCarlo.cpp  KineticMonteCarlo.h  kmc.cpp
optim/: ART.cpp  ART.h  Dimer.cpp  Dimer.h  Relax.cpp  Relax.h  SaddleSearch.cpp  SaddleSearch.h
potentials/: Species.cpp  copy-metal.py  copy-pair.py
potentials/metal/: Field.cpp  Field.h  ManyBody.cpp  ManyBody.h  MetalPotential.cpp  MetalPotential.h  NbrListPBC.h
potentials/pair/: Energy.cpp  Ewald.cpp  Ewald.h  Field.cpp  Field.h  NbrListPBC.cpp  TwoBody.cpp  TwoBody.h
